--- a/client/src/css_files/main_page.css
+++ b/client/src/css_files/main_page.css
@@ -82,46 +82,65 @@
 
 }
 
+
+/*footer section*/
 .footer-container{
     width: 100%;
     position: absolute;
     bottom: 0;
-    height: 20vh;
+    height: auto;
 
     background-color: white;
     display: flex;
     flex-direction: row;
    align-items: center;
-   justify-content: space-evenly
+   justify-content: space-evenly;
+   flex-wrap: wrap;
+ 
 }
 
-.footer-one-container{
-    width: 25%;
+.footer-content-containers{
+    width: 20%;
+
+    display: flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items: center;
+    font-weight: bold;
+    text-align: center;
   
 }
 
-
-.footer-two-container{
-    width: 25%;
-
-}
-
-
-
-.footer-three-container{
-    width: 25%;
+.footer-content-containers p{
+   font-size: 1em;
+   text-align: center;
     
 }
 
-.footer-four-container{
-    width: 25%;
+
+
+
+.footer-content-containers img{
+    width:calc(100px + 30%);
+ 
+}
+
+.social-containers{
+
+    display: flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+    align-items: center;
     
+
 }
 
-.footer-four-container img{
-    width:10%;
-}
+.social-icons{
+  width: 3em;
+  height: 3em;
 
+  padding: 1em;
+}
 
 @media (max-width: 800px) {
     
@@ -146,6 +165,17 @@
         
         
     }
+    .footer-content-containers{
+        width: 100%;
+    
+        
+      
+    }
+    .footer-content-containers p{
+        font-size: calc(10px + .5vw);
+    
+         
+     }
     
     
   }
